# docli

./: .gitignore  README.md  pyproject.toml
.docli/: config.json
src/docli/: __init__.py  analyzer.py  docstore.py  harness.py  main.py
tests/: test_harness.py
