[project]
name = "docli"
version = "0.1.0"
description = "Documentador Git — gera .md a partir de git diff com descrição do usuário"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
]

[project.scripts]
docli = "docli.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
